Adding new learned lines now fully updates to the Gui Removed test button Number of lines temporarily limited to 128

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -361,6 +361,7 @@ add_definitions (-DSUB_COLOUR=0xafcfdf00)
 add_definitions (-DPAD_COLOUR=0xcfdfaf00)
 add_definitions (-DNUM_MIDI_PARTS=64)
 add_definitions (-DNUM_MIDI_CHANNELS=16)
+add_definitions (-DMIDI_LEARN_BLOCK=128)
 add_definitions (-DMAX_ENVELOPE_POINTS=40)
 add_definitions (-DMIN_ENVELOPE_DB=-60)
 add_definitions (-DMAX_RESONANCE_POINTS=256)
