Refactoring of custom valuator widgets and dynamic tooltips.
Moved custom widgets out of fluid files, refactored and cleaned-up code
Moved TipWin class to its own file, renamed to DynTooltip
Drawing of dynamic tooltips now use the standard tooltip colours/margins.
Tooltip graphics are now drawn centered below the formatted value, and the
formatted values are also center aligned.

Interface  for standardised behaviour of when/how dynamic tooltips are shown,
and how the format types are set.
MWheelSlider now supports dynamic tooltips.
Fixed bugs in handle methods causing tooltips to be stuck when dragging multiple
valuator widgets consecutively without releasing the button.

Some minor refactoring of velocity-sensing-function  graphics.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -322,14 +322,14 @@ set (MusicIO_sources
 )
 
 set (FltkUI_names
-    "WidgetPDialUI" "PresetsUI" "EnvelopeUI"
+    "PresetsUI" "EnvelopeUI"
     "LFOUI" "FilterUI" "VirKeyboardUI"
     "ConfigUI" "SUBnoteUI" "ResonanceUI"
     "OscilGenUI" "ADnoteUI" "PADnoteUI"
     "EffUI" "BankUI" "PartUI"
     "MicrotonalUI" "MasterUI" "MasterMiscUI"
     "ParametersUI" "ConsoleUI" "VectorUI"
-    "MidiLearnUI" "WidgetMWSliderUI"
+    "MidiLearnUI"
 )
 
 # workaround fltk_wrap_ui breakage
@@ -347,6 +347,13 @@ foreach(basename ${FltkUI_names})
     set (FltkUI_sources ${FltkUI_sources} "${sourcefile}")
     set (FltkUI_headers ${FltkUI_headers} "${headerfile}")
 endforeach(basename ${FltkUI_names})
+
+set (FltkUI_sources
+    ${FltkUI_sources}
+    UI/DynamicTooltip.cpp
+    UI/WidgetPDial.cpp
+    UI/WidgetMWSlider.cpp
+)
 
 add_definitions (
     -D'YOSHIMI_VERSION="${YOSHIMI_VERSION}"'
