Updated /dev_notes/Effect_Inserts.txt Removed boost dependency based on ideas from Rob

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -166,12 +166,12 @@ else (JACK_FOUND)
 endif (JACK_FOUND)
 
 # Boost
-find_package (Boost)
-if (Boost_FOUND)
-    message(STATUS "Found boost headers version " ${Boost_VERSION})
-else (Boost_FOUND)
-    message (FATAL_ERROR "boost headers required, but not found")
-endif (Boost_FOUND)
+#find_package (Boost)
+#if (Boost_FOUND)
+#    message(STATUS "Found boost headers version " ${Boost_VERSION})
+#else (Boost_FOUND)
+#    message (FATAL_ERROR "boost headers required, but not found")
+#endif (Boost_FOUND)
 
 # fontconfig
 pkg_check_modules (FONTCONFIG REQUIRED fontconfig>=0.22)
