commit, then push, in that order, and make it acutally use the options

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -274,7 +274,7 @@ else (BuildForDebug)
             else (BuildForNEON)
                 set (CMAKE_CXX_FLAGS_RELEASE ${BuildOptionsBasic})
                 if (BuildForThisCPU)
-                    set (CMAKE_CXX_FLAGS_RELEASE ${BuildOptions_ThisCPU})
+                    set (CMAKE_CXX_FLAGS_RELEASE ${BuildOptionsThisCPU})
                 else (BuildForThicCPU)
                     set (CMAKE_CXX_FLAGS_RELEASE ${BuildOptionsBasic})
                 endif (BuildForThisCPU)
