--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,14 +17,14 @@
 #   You should have received a copy of the GNU General Public License
 #   along with yoshimi.  If not, see <http://www.gnu.org/licenses/>.
 
-# Modifed March 2017
+# Modifed September 2017
 
 project (Yoshimi)
-cmake_minimum_required (VERSION 2.6)
-cmake_policy (VERSION 2.6)
-cmake_policy (SET CMP0004 OLD)
+cmake_minimum_required (VERSION 3.0)
+cmake_policy (VERSION 3.0)
+cmake_policy (SET CMP0004 NEW)
 if (POLICY CMP0046)
-    cmake_policy (SET CMP0046 OLD)
+    cmake_policy (SET CMP0046 NEW)
 endif (POLICY CMP0046)
 set (CMAKE_CXX_STANDARD 11) # we seem to need both for
 add_definitions(-std=gnu++11) # various versions of cmake
