--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ add_definitions(-Werror=format-security)
 
 # ^^^ comment these two out on release pushes ^^^
 
-set (YOSHIMI_VERSION "1.5.3 M")
+set (YOSHIMI_VERSION "1.5.4 rc1")
 
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
