--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ add_definitions(-std=gnu++11) # various versions of cmake
 
 # ^^^ comment these two out on release pushes ^^^
 
-set (YOSHIMI_VERSION "1.5.4.1")
+set (YOSHIMI_VERSION "1.5.4 M")
 
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
