--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ add_definitions(-Wall)
 add_definitions(-Werror=format-security)
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "1.5.6 rc1")
+set (YOSHIMI_VERSION "1.5.6")
 
 file (WRITE version.txt "${YOSHIMI_VERSION}")
 
