--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ add_definitions(-std=gnu++11) # various versions of cmake
 # vvv
 add_definitions(-Wall)
 add_definitions(-Werror=format-security)
+add_definitions(-pedantic)
 # ^^^ comment these out on release pushes
 
 set (YOSHIMI_VERSION "1.5.6 M")
