--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@
 #   You should have received a copy of the GNU General Public License
 #   along with yoshimi.  If not, see <http://www.gnu.org/licenses/>.
 
-# Modifed June 2018
+# Modifed August 2018
 
 project (Yoshimi)
 cmake_minimum_required (VERSION 3.0)
@@ -39,7 +39,7 @@ add_definitions(-Werror=format-security)
 add_definitions(-Wextra)
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "1.5.8.2")
+set (YOSHIMI_VERSION "1.5.8.2 M")
 add_definitions (-DMIN_CONFIG_MAJOR=1)
 add_definitions (-DMIN_CONFIG_MINOR=5)
 
