--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@
 #   You should have received a copy of the GNU General Public License
 #   along with yoshimi.  If not, see <http://www.gnu.org/licenses/>.
 
-# Modifed September 2018
+# Modified September 2018
 
 project (Yoshimi)
 cmake_minimum_required (VERSION 3.0)
