Fixed regression - Resonance deactivated 'Close' button Added 'Multi Rushes' instrument to 'Will Godfrey Collection' Corrected some file dates Final updates to docs Set release version as 1.5.10

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@
 #   You should have received a copy of the GNU General Public License
 #   along with yoshimi.  If not, see <http://www.gnu.org/licenses/>.
 
-# Modified December 2018
+# Modified January 2019
 
 project (Yoshimi)
 cmake_minimum_required (VERSION 3.0)
@@ -36,11 +36,11 @@ add_definitions(-Wall)
 
 # vvv
 #add_definitions(-Wpedantic)
-add_definitions(-Werror=format-security)
-add_definitions(-Wextra)
+#add_definitions(-Werror=format-security)
+#add_definitions(-Wextra)
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "1.5.10 rc3")
+set (YOSHIMI_VERSION "1.5.10")
 add_definitions (-DMIN_CONFIG_MAJOR=1)
 add_definitions (-DMIN_CONFIG_MINOR=5)
 
