Keep build system CXXFLAGS when not selecting a specialized build
Cross/sysrooted build environments as Openembedded/Yocto set a lot flags to
tailor builds and usually do a good job selecting the correct flags for the
target machine.
So don't ignore them because it causes nasty build failures.

Signed-off-by: Andreas Müller <schnitzeltony@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -317,7 +317,7 @@ else (BuildFor0ld_X86)
                 if (BuildForThisCPU)
                     set (CMAKE_CXX_FLAGS ${BuildOptionsThisCPU})
                 else (BuildForThisCPU)
-                    set (CMAKE_CXX_FLAGS ${BuildOptionsBasic})
+                    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${BuildOptionsBasic}")
                 endif (BuildForThisCPU)
             endif (BuildForNEON)
         endif (BuildForCore2_X86_64)
